tests/negative/neg_task_shared_variable.safe
-- Test: neg_task_shared_variable
-- Description: Two tasks access the same package global directly.
-- Expected: REJECT task_variable_ownership

package neg_task_shared_variable

   subtype counter is integer (0 to 100)

   global_count : counter = 0

   task a

      loop
         global_count = global_count + 1

   task b

      loop
         global_count = global_count + 1
